--- a/templates/index.html
+++ b/templates/index.html
@@ -53,6 +53,9 @@
                     <p class="quote">“Wine is one of the most civilized things in the world and one of the most natural things of the world that has been brought to the greatest perfection, and it offers a greater range for enjoyment and appreciation than, possibly, any other purely sensory thing.”</p>
                     <p class="quote_attribute">-Ernest Hemingway</p>
                 </div>
+                <div class="col-md-4">
+                    <img src="../static/wine_and_grapes.jpg" class="img-fluid img-thumbnail" alt="Wine and grapes">
+                </div>
             </div>
             <div class="row">
                 <div class="col-md-8">
