--- a/static/style.css
+++ b/static/style.css
@@ -34,7 +34,12 @@ p {
     font-family: fantasy;
 }
 .footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
     background-color: #5F9EA0;
+    color: white;
     text-align: center;
 }
 
